# poco_showcase

./: CMakeLists.txt  LICENSE  README.adoc  default_configured_application.properties
.github/workflows/: cmake.yml
config/: async_logging.properties  color_console_logging.properties  console_logging.properties  priority_logging.properties  simple_file_logging.properties  splitter_logging.properties  with_options_application.properties
include/logging/: priority_channel.h
include/util/application/: basic_application.h  default_configured_application.h  with_options_application.h
include/util/application_helpers/: application_helpers.h  log_level_validator.h
presentation/: CMakeLists.txt  api.adoc  features.adoc  intro.adoc  logging.adoc  poco_showcase.adoc  uses.adoc
src/logging/: CMakeLists.txt  async_channel_logging.cpp  console_logging.cpp  event_channel_logging.cpp  formatting_channel_logging.cpp  priority_channel.cpp  priority_channel_logging.cpp  simple_file_logging.cpp  splitter_channel_logging.cpp  syslog_logging.cpp
src/util/: CMakeLists.txt
src/util/application/: CMakeLists.txt  basic_application.cpp  default_configured_application.cpp  main.cpp  simplest_application.cpp  with_options_application.cpp
src/util/application_helpers/: CMakeLists.txt  application_helpers.cpp  log_level_validator.cpp
